# htr-judicial-manuscripts

./: .gitignore  CONVENTIONS_NLP.md  CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MODEL_CARD.md  README.md  config.yaml  config_htr_catmus_french_serious.yaml  config_htr_french.yaml  config_htr_french_decoder.yaml  config_htr_light.yaml  pyproject.toml  requirements.txt
artifacts/: dataset_hashes.json  nlp_dataset_hashes.json
dataset_nlp/: README.md  metadata.json  page_01_canvas_0021.json  page_01_canvas_0021_full_page_transcription.txt  page_02_canvas_0022.json  page_02_canvas_0022_full_page_transcription.txt  page_03_canvas_0023.json  page_03_canvas_0023_full_page_transcription.txt  page_04_canvas_0024.json  page_04_canvas_0024_full_page_transcription.txt  page_05_canvas_0025.json  page_05_canvas_0025_full_page_transcription.txt  transcriptions.json
docs/: ADVANCED_NLP_PRESENTATION.md  BOOTSTRAP_EVALUATION.md  BRIEF_REQUIREMENTS_AUDIT.md  CODE_AUDIT.md  DATA_CONTRACT.md  FINAL_ARTICLE_DRAFT.md  HTR_IMPROVEMENT_STRATEGY.md  HTR_MODEL_COMPARISON.md  HTR_QUALITY_REPORT.md  HTR_RESCUE_PLAN.md  JUDICIAL_CORPUS_SELECTION.md  JUDICIAL_GROUND_TRUTH.md  MD5_COMPLIANCE_REPORT.md  NLP_PIPELINE.md  NLP_REQUIREMENTS_AUDIT.md  POST_HTR_CORRECTION.md  PREPROCESSING_PIPELINE.md  PROJECT_STRUCTURE.md  QUALITY_FLAGS.md  SEGMENTATION_EVALUATION.md  TECHNICAL_STATUS.md
experiments/: journal.jsonl
notebooks/: segmentation.ipynb
schemas/: nlp_schema.json  transcription_schema.json
tests/: test_advanced_nlp.py  test_data_contract.py  test_metrics_regression.py  (+5 more)
(+80 files in other folders)
